<resources>
    <string name="app_name">E-Ticaret-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_your_username">Enter your username or email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log-In</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="full_name">Full Name</string>
    <string name="email_email_com">Email@email.com</string>
    <string name="user_password">0lelplR</string>
    <string name="username">kminchelle</string>
    <string name="logo">Logo</string>
    <string name="enter_a_keyword">Enter a keyword</string>
    <string name="child_item">Child Item</string>
    <string name="click_on_item_to_show_the_details">Click on item to show the details...\nLong press to remove the element from the cart.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-In</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="logout">Logout</string>
    <string name="change_to_dark_light">Change to Dark/Light</string>
    <string name="or">or</string>
    <string name="login_as_random_user">Login as random user</string>
    <string name="click_to_change_your_email_or_password">Click to change your email or password</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="_username">Username</string>
    <string name="results">Results</string>
    <string name="resend_email_for_verification">Resend email for verification.</string>
    <string name="send">Send</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="reset_your_password_via_your_email_address_or_username">Reset your password via your email address or username</string>
    <string name="reset_password">Reset Password</string>
    <string name="description">Description</string>
    <string name="remove_product_from_the_cart">Remove product from the cart</string>
    <string name="price">Price</string>
    <string name="user_full_name">User Full Name</string>
    <string name="comment">Comment</string>
    <string name="please_write_your_review_about_the_product">Please write your review about the product</string>
    <string name="write_your_comment_review_here">Write your comment/review here.</string>
    <string name="submit_comment_review">Submit Comment/Review</string>
</resources>