<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_write_your_review_about_the_product"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_comment_review_here"
        android:maxLines="5"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_comment_review"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_marginTop="16dp"/>
</LinearLayout>
