<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/item_selector"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="1.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/userFullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_full_name"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/comment"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/removeComment"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_remove_product"
            android:text="@string/remove_product_from_the_cart"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/priceTextView"
            app:layout_constraintStart_toStartOf="@+id/priceTextView"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
